Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-8288

timeout on connection that is not writable does not cleanup on primary

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • qpid-cpp-1.39.0
    • qpid-cpp-1.40.0
    • C++ Broker
    • None

    Description

      If an incoming socket from a backup is not writable at the point it times out, then the sessions get cleaned up but the connection observers are not notified of the closed connection (as the code used by the io layer is not yet deleted; it is only deleted when the socket is writable).

      For the primary in an ha cluster this means it does not fully handle the lost connection.

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: