QPID-8288: ensure closed is notified without waiting for deletion of connection